add file branch

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <header class="header page-container">
         <div class="header__logo"></div>
         <div class="header__lang">
-          <a href="#" class="header__item header__item_active">Ru</a>
-          <a href="#" class="header__item">En</a>
+          <a href="#" class="header__item header__item_active link-hover">Ru</a>
+          <a href="#" class="header__item link-hover">En</a>
         </div>
       </header>
       <main class="main page-container">
@@ -117,7 +117,7 @@
               <a
                 target="_blank"
                 href="http://park-kosa.ru"
-                class="place__link-text"
+                class="place__link-text link-hover"
                 >park-kosa.ru</a
               >
             </div>
@@ -150,7 +150,7 @@
               <a
                 target="_blank"
                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-                class="place__link-text"
+                class="place__link-text link-hover"
                 >National Geographic</a
               >
             </div>
@@ -183,7 +183,7 @@
               <a
                 target="_blank"
                 href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
-                class="place__link-text"
+                class="place__link-text link-hover"
                 >YouTube
               </a>
             </div>
@@ -216,7 +216,7 @@
               <a
                 target="_blank"
                 href="https://vk.com/baikalmile"
-                class="place__link-text"
+                class="place__link-text link-hover"
                 >https://vk.com/baikalmile</a
               >
             </div>
@@ -248,7 +248,7 @@
               <a
                 target="_blank"
                 href="http://vodlozero.ru"
-                class="place__link-text"
+                class="place__link-text link-hover"
                 >http://vodlozero.ru/</a
               >
             </div>
@@ -274,7 +274,7 @@
           <a
             target="_blank"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
-            class="cover__link-img"
+            class="cover__link-img link-hover_type_cover"
           >
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__descr">
@@ -286,23 +286,29 @@
       </main>
       <footer class="footer page-container">
         <div class="footer__items-link">
-          <a href="https://yandex.ru/maps" class="footer__item" target="_blank"
+          <a
+            href="https://yandex.ru/maps"
+            class="footer__item link-hover"
+            target="_blank"
             >Карты</a
           ><a
             href="https://yandex.ru/pogoda"
-            class="footer__item"
+            class="footer__item link-hover"
             target="_blank"
             >Погода</a
-          ><a href="https://rasp.yandex.ru" target="_blank" class="footer__item"
+          ><a
+            href="https://rasp.yandex.ru"
+            target="_blank"
+            class="footer__item link-hover"
             >Расписание</a
           ><a
             href="https://calendar.yandex.ru"
-            class="footer__item"
+            class="footer__item link-hover"
             target="_blank"
             >Календарь</a
           ><a
             href="https://travel.yandex.ru"
-            class="footer__item"
+            class="footer__item link-hover"
             target="_blank"
             >Путешествия</a
           >
