--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./pages/index.css">
     <title>Путешествия по России</title>
   </head>
   <body>
@@ -22,7 +22,7 @@
           <p class="travel__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
           </p>
-          <img src="./images/lead-polka.jpg" alt="Поезд" class="travel__img" />
+          <img src="./images/lead-polka.jpg" alt="Поезд" class="travel__img">
           <p class="travel__descr-img">ваша полка — верхняя</p>
         </div>
         <div class="intro">
@@ -51,63 +51,51 @@
           <img
             src="./images/photo-grid-train.jpg"
             alt="Окно поезда"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-atharva-tulsi.jpg"
             alt="Горы Кавказа"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-tuman.jpg"
             alt="Туман"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-sochi.jpg"
             alt="Сочи"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-arisa.jpg"
             alt="Машина на льду"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-baikal.jpg"
             alt="Берег Байкала"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-elbrus.jpg"
             alt="Гора Эльбрус"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-kondratiev.jpg"
             alt="Знак"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-kamchatka-1.jpg"
             alt="Камчатка"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-kamchatka-2.jpg"
             alt="Поля и горы камчатки"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-baikal-2.jpg"
             alt="Горы и берег Байкала"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
           <img
             src="./images/photo-grid-ergaki.jpg"
             alt="Горы Ергаки"
-            class="photo-grid__img"
-          />
+            class="photo-grid__img">
         </div>
         <div class="places">
           <div class="place">
@@ -124,8 +112,7 @@
             <img
               src="./images/place-kosa.jpg"
               alt="Куршская коса"
-              class="place__img"
-            />
+              class="place__img">
             <div class="place__texts">
               <p class="place__text">
                 Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
@@ -157,8 +144,7 @@
             <img
               src="./images/place-kolsky.jpg"
               alt="Кольский"
-              class="place__img"
-            />
+              class="place__img">
             <div class="place__texts">
               <p class="place__text">
                 Почти весь полуостров находится за Полярным кругом. Саамская
@@ -190,8 +176,7 @@
             <img
               src="./images/place-altai.jpg"
               alt="Алтай"
-              class="place__img"
-            />
+              class="place__img">
             <div class="place__texts">
               <p class="place__text">
                 Алтай — одно из красивейших мест в России. В первую очередь
@@ -223,8 +208,7 @@
             <img
               src="./images/place-winter-baikal.jpg"
               alt="Зимний Байкал"
-              class="place__img"
-            />
+              class="place__img">
             <div class="place__texts">
               <p class="place__text">
                 Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -255,8 +239,7 @@
             <img
               src="./images/place-karelia.jpg"
               alt="Карелия"
-              class="place__img"
-            />
+              class="place__img">
             <p class="place__text">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
