--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           <a
             target="_blank"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
-            class="cover__link-img link-hover_type_cover"
+            class="cover__link-img"
           >
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__descr">
