--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         </div>
       </header>
       <main class="main page-container">
-        <div class="travel">
+        <section class="travel">
           <h1 class="travel__title">Путешествия по России</h1>
           <p class="travel__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
           </p>
           <img src="./images/lead-polka.jpg" alt="Поезд" class="travel__img">
           <p class="travel__descr-img">ваша полка — верхняя</p>
-        </div>
-        <div class="intro">
+        </section>
+        <section class="intro">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__descr">
             По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
@@ -40,14 +40,14 @@
             вашего отпуска.
           </p>
           <ul class="intro__list">
-            <li class="intro__item">Часовых поясов 11</li>
-            <li class="intro__item">Объектов природного наследия ЮНЕСКО 12</li>
-            <li class="intro__item">Объектов культурного наследия ЮНЕСКО 16</li>
-            <li class="intro__item">Природных заповедников 105</li>
-            <li class="intro__item">Аэропортов 241</li>
+            <li class="intro__item">Часовых поясов <span class="intro__span-accent">11</span></li>
+            <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
+            <li class="intro__item">Объектов культурного наследия ЮНЕСКО <span class="intro__span-accent">16</span></li>
+            <li class="intro__item">Природных заповедников <span class="intro__span-accent">105</span></li>
+            <li class="intro__item">Аэропортов <span class="intro__span-accent">241</span></li>
           </ul>
-        </div>
-        <div class="photo-grid">
+        </section>
+        <section class="photo-grid">
           <img
             src="./images/photo-grid-train.jpg"
             alt="Окно поезда"
@@ -96,9 +96,9 @@
             src="./images/photo-grid-ergaki.jpg"
             alt="Горы Ергаки"
             class="photo-grid__img">
-        </div>
-        <div class="places">
-          <div class="place">
+        </section>
+        <section class="places">
+          <article class="place">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__link">
               <h3 class="place__link-title">url</h3>
@@ -129,8 +129,8 @@
                 прохладного моря.
               </p>
             </div>
-          </div>
-          <div class="place">
+          </article>
+          <article class="place">
             <h2 class="place__title">Кольский</h2>
             <div class="place__link">
               <h3 class="place__link-title">url</h3>
@@ -161,8 +161,8 @@
                 с билетом в Мурманск.
               </p>
             </div>
-          </div>
-          <div class="place">
+          </article>
+          <article class="place">
             <h2 class="place__title">Алтай</h2>
             <div class="place__link">
               <h3 class="place__link-title">url</h3>
@@ -193,8 +193,8 @@
                 края.
               </p>
             </div>
-          </div>
-          <div class="place">
+          </article>
+          <article class="place">
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__link">
               <h3 class="place__link-title">url</h3>
@@ -224,8 +224,8 @@
                 197.011 км/ч.
               </p>
             </div>
-          </div>
-          <div class="place">
+          </article>
+          <article class="place">
             <h2 class="place__title">Карелия</h2>
             <div class="place__link">
               <h3 class="place__link-title">url</h3>
@@ -251,9 +251,9 @@
               редких тропинках деревья в паре метров от земли помечены
               медвежьими когтями. Чтобы все знали, кто тут хозяин.
             </p>
-          </div>
-        </div>
-        <div class="cover">
+          </article>
+        </section>
+        <section class="cover">
           <a
             target="_blank"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
@@ -265,10 +265,10 @@
               Байкала на электричках.
             </p>
           </a>
-        </div>
+        </section>
       </main>
       <footer class="footer page-container">
-        <div class="footer__items-link">
+        <nav class="footer__items-link">
           <a
             href="https://yandex.ru/maps"
             class="footer__item link-hover"
@@ -295,7 +295,7 @@
             target="_blank"
             >Путешествия</a
           >
-        </div>
+        </nav>
         <p class="footer__copyright">© 2023. Юлия Челнокова</p>
       </footer>
     </div>
